--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "standard": "^12.0.1"
   },
   "scripts": {
+    "preinstall": "cp -n .env.local.example .env.local || true",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
