--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@types/node": "^11.13.4",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
+    "@types/react-input-mask": "^2.0.1",
     "@types/styled-components": "^4.1.14",
     "google-map-react": "^1.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-input-mask": "^2.0.4",
     "react-scripts": "2.1.8",
     "styled-components": "^4.2.0",
     "styled-reset": "^2.0.6",
