--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "dependencies": {
     "@types/google-map-react": "^0.23.11",
     "@types/jest": "^24.0.11",
+    "@types/lodash.get": "^4.4.6",
+    "@types/lodash.omit": "^4.5.6",
     "@types/node": "^11.13.4",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
     "@types/react-input-mask": "^2.0.1",
     "@types/styled-components": "^4.1.14",
     "google-map-react": "^1.1.4",
+    "lodash.get": "^4.4.2",
+    "lodash.omit": "^4.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-input-mask": "^2.0.4",
