--- a/package.json
+++ b/package.json
@@ -19,18 +19,15 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-input-mask": "^2.0.4",
-    "react-scripts": "3.0.0",
+    "react-scripts": "^2.1.8",
     "styled-components": "^4.2.0",
     "styled-reset": "^2.0.6",
     "typescript": "^3.4.3"
   },
   "devDependencies": {
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
-    "jest-enzyme": "^7.0.2",
     "jest-styled-components": "^6.3.1",
     "lint-staged": "^8.1.5",
-    "react-test-renderer": "^16.8.6",
+    "react-testing-library": "^7.0.0",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1"
   },
