--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^3.4.3"
   },
   "devDependencies": {
+    "jest-fetch-mock": "^2.1.2",
     "jest-styled-components": "^6.3.1",
     "lint-staged": "^8.1.5",
     "react-testing-library": "^7.0.0",
