--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jest-styled-components": "^6.3.1",
     "lint-staged": "^8.1.5",
     "react-testing-library": "^7.0.0",
+    "snapshot-diff": "^0.5.1",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1"
   },
