--- a/package.json
+++ b/package.json
@@ -70,14 +70,15 @@
       "!src/react-app-env.d.ts",
       "!src/serviceWorker.tsx",
       "!src/styled.d.ts",
+      "!src/testHelper.tsx",
       "!<rootDir>/node_modules/"
     ],
     "coverageThreshold": {
       "global": {
-        "branches": 50,
-        "functions": 50,
-        "lines": 50,
-        "statements": 50
+        "branches": 60,
+        "functions": 60,
+        "lines": 60,
+        "statements": 60
       }
     }
   },
